--- a/landingpage/Home.html
+++ b/landingpage/Home.html
@@ -11,11 +11,11 @@
 <body>
   <header>
     <div class="container3">
-      <h1>CODSOFT</h1>
+      <h1>HARINI</h1>
       <nav class="top-right-menu">
         <a href="Home.html">Home</a>
         <a href="contact.html">Contact</a>
-        <a href="https://www.codsoft.in/about-us">About</a>
+        <a href="">About</a>
       </nav>
     </div>
   </header>
@@ -24,7 +24,7 @@
     <div class="container" >
       <h2>Welcome to Our Amazing Website</h2>
       <p>Discover a new world of creativity and innovation.</p><br>
-      <a href="https://www.codsoft.in/" class="btn">Learn More</a>
+      <a href="" class="btn">Learn More</a>
     </div>
   </section>
 
@@ -79,7 +79,7 @@
   </section>
   <footer>
     <div class="container">
-      <p> Copyright ©2023 CODSOFT. All Rights Reserved to Harini</p>
+      <p> Copyright ©2023 HARINI. All Rights Reserved to Harini</p>
     </div>
   </footer>
 </body>
