--- a/landingpage/contact.html
+++ b/landingpage/contact.html
@@ -17,7 +17,7 @@
           <nav class="top-right-menu">
             <a href="Home.html">Home</a>
             <a href="contact.html">Contact</a>
-            <a href="https://www.codsoft.in/about-us">About</a>
+            <a href="">About</a>
           </nav>
         </div>
       </header>
@@ -39,7 +39,7 @@
 <br><br><br><br><br>
     <footer>
         <div class="container">
-            <p>&copy; 2023 Your Company. All rights reserved.</p>
+            <p>&copy; HARINI'S Company 2023. All rights reserved.</p>
         </div>
     </footer>
 </body>
